# whispers-of-self

./: README.md  pyproject.toml  sitecustomize.py  test_rich_visualization.py
config/: simulation_config.yaml
src/utils/: __init__.py
src/whispers/adaptation/: __init__.py  evolution.py  imitation.py
src/whispers/agents/: __init__.py  base_agent.py  personality_agents.py
src/whispers/agents/personalities/: __init__.py  altruist.py  egoist.py  pragmatist.py
src/whispers/core/: __init__.py
src/whispers/environment/: __init__.py  big_resource.py  environment.py  foraging.py
src/whispers/metrics/: __init__.py  tracking.py
src/whispers/negotiation/: __init__.py  baseline.py
src/whispers/simulation/: __init__.py  simulation.py
src/whispers/snapshots/: __init__.py  snapshot.py
tests/: conftest.py  test_adaptation_baselines.py  test_adaptation_edge_cases.py  test_agents.py  test_environment_big_resource.py  test_environment_edge_cases.py  test_environment_foraging.py  test_metrics_and_snapshots.py  test_metrics_snapshots_extended.py  test_negotiation_baseline.py  test_simulation_basics.py  test_simulation_extended.py
