[project]
name = "whispers-of-self"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",

    "mypy>=1.17.1",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.1",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",

    "altair>=5.5.0",
    "plotly>=6.3.0",
]
